Removed default controller tests, added to user_key model

--- a/app/views/user_keys/_form.html.erb
+++ b/app/views/user_keys/_form.html.erb
@@ -11,15 +11,11 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="row">
     <%= f.label :status %><br>
     <%= f.text_field :status %>
   </div>
-  <div class="field">
-    <%= f.label :date_requested %><br>
-    <%= f.date_select :date_requested %>
-  </div>
-  <div class="field">
+  <div class="row">
     <%= f.label :expiration_date %><br>
     <%= f.date_select :expiration_date %>
   </div>
