--- a/app/views/user_keys/show.html.erb
+++ b/app/views/user_keys/show.html.erb
@@ -6,13 +6,8 @@
 </p>
 
 <p>
-  <strong>Date requested:</strong>
-  <%= @user_key.date_requested %>
-</p>
-
-<p>
-  <strong>Expiration date:</strong>
-  <%= @user_key.expiration_date %>
+  <strong>Time submitted:</strong>
+  <%= @user_key.time_submitted %>
 </p>
 
 <p>
