Added nicer buttons

--- a/app/views/user_keys/edit.html.erb
+++ b/app/views/user_keys/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @user_key %> |
-<%= link_to 'Back', user_keys_path %>
+<%= link_to 'Show', @user_key, class: "button small" %> |
+<%= link_to 'Back', user_keys_path, class: "button small secondary" %>
