--- a/app/views/user_keys/show.html.erb
+++ b/app/views/user_keys/show.html.erb
@@ -24,5 +24,5 @@
 
 <br/>
 
-<%= button_to 'Edit', edit_user_key_path(@user_key), method: :get %> |
-<%= button_to 'Back', user_keys_path, method: :get %>
+<%= link_to 'Edit', edit_user_key_path(@user_key), class: "button small" %> |
+<%= link_to 'Back', user_keys_path, class: "button small secondary" %>
