--- a/app/views/user_keys/index.html.erb
+++ b/app/views/user_keys/index.html.erb
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New User key', new_user_key_path %>
+<%= link_to 'New User key', new_user_key_path, class: "button small" %>
