--- a/app/views/user_keys/new.html.erb
+++ b/app/views/user_keys/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', user_keys_path %>
+<%= link_to 'Back', user_keys_path, class: "button small secondary" %>
