--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :role %><br>
-    <%= f.text_field :role %>
+    <%= f.select :role, User::ROLE_LIST %>
   </div>
   <div class="field">
     <%= f.label :is_approver %><br>
