User_key, user view changes

--- a/app/views/user_keys/_form.html.erb
+++ b/app/views/user_keys/_form.html.erb
@@ -30,6 +30,6 @@
   <%= render :partial => 'filters_checkboxes' %>
   
   <div class="actions">
-    <%= f.submit class: "submit success" %>
+    <%= f.submit class: "big-button success" %>
   </div>
 <% end %>
