--- a/app/views/user_keys/index.html.erb
+++ b/app/views/user_keys/index.html.erb
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New User key', new_user_key_path, class: "button small" %>
+<%= link_to 'New User key', new_user_key_path, class: "big-button" %>
