--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -24,6 +24,6 @@
     <%= f.check_box :is_approver %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "big-button success" %>
   </div>
 <% end %>
