--- a/app/views/user_keys/show.html.erb
+++ b/app/views/user_keys/show.html.erb
@@ -26,5 +26,5 @@
 <%= link_to 'Submit Filters for Approval', set_as_filtered_path(@user_key), method: :patch, class: "button small" %> 
 <br/>
 
-<%= link_to 'Edit', edit_user_key_path(@user_key), class: "button small" %> |
-<%= link_to 'Back', user_keys_path, class: "button small secondary" %>
+<%= link_to 'Edit', edit_user_key_path(@user_key), class: "big-button" %> |
+<%= link_to 'Back', user_keys_path, class: "big-button secondary" %>
