--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,5 +17,5 @@
 
 <%= render partial: 'list_of_user_keys' %>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Edit', edit_user_path(@user), class: "big-button" %> |
+<%= link_to 'Back', users_path, class: "big-button secondary" %>
