css changes, fixed some filter views, fixed some layout and user views

--- a/app/views/filters/_form.html.erb
+++ b/app/views/filters/_form.html.erb
@@ -24,6 +24,6 @@
     <%= f.text_field :filter_value %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "big-button success" %>
   </div>
 <% end %>
