--- a/app/views/filters/edit.html.erb
+++ b/app/views/filters/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @filter %> |
-<%= link_to 'Back', filters_path %>
+<%= link_to 'Show', @filter, class: "big-button" %> |
+<%= link_to 'Back', filters_path, class: "big-button secondary" %>
