--- a/app/views/filters/index.html.erb
+++ b/app/views/filters/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Listing Filters</h1>
 
 <table>
@@ -28,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Filter', new_filter_path %>
+<%= link_to 'New Filter', new_filter_path, class: "big-button" %>
