--- a/app/views/filters/show.html.erb
+++ b/app/views/filters/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>Resource:</strong>
   <%= @filter.resource %>
@@ -15,5 +13,5 @@
   <%= @filter.filter_value %>
 </p>
 
-<%= link_to 'Edit', edit_filter_path(@filter) %> |
-<%= link_to 'Back', filters_path %>
+<%= link_to 'Edit', edit_filter_path(@filter), class: "big-button" %> |
+<%= link_to 'Back', filters_path, class: "big-button secondary" %>
