--- a/app/views/user_keys/_form.html.erb
+++ b/app/views/user_keys/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="row">
     <%= f.label :user %><br>
-    <%= f.select :user_id, User.all %>
+    <%= f.collection_select :user_id, User.alphabetical, :id, :andrew_id %>
   </div>
   
   <div class="row">
