--- a/app/views/user_keys/show.html.erb
+++ b/app/views/user_keys/show.html.erb
@@ -20,11 +20,7 @@
 
 <%= render partial: 'list_of_filters' %>
 
-<%= link_to 'Submit Request', set_as_submitted_path(@user_key), method: :patch, class: "button small" %> 
-<br/>
-
-<%= link_to 'Submit Filters for Approval', set_as_filtered_path(@user_key), method: :patch, class: "button small" %> 
-<br/>
+<%= render partial: 'submit_buttons' %>
 
 <%= link_to 'Edit', edit_user_key_path(@user_key), class: "big-button" %> |
 <%= link_to 'Back', user_keys_path, class: "big-button secondary" %>
