Removed unneeded stylesheets, changed user_key views

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -49,7 +49,7 @@ section {
   margin-top: 20px;
   }
 footer {
-  background-color: #bbb;
+  background-color: #aaa;
   font-size: 10pt;
   color: #eee;
 }
