--- a/app/views/user_keys/show.html.erb
+++ b/app/views/user_keys/show.html.erb
@@ -24,3 +24,5 @@
 
 <%= link_to 'Edit', edit_user_key_path(@user_key), class: "big-button" %> |
 <%= link_to 'Back', user_keys_path, class: "big-button secondary" %>
+
+<%= render partial: 'list_of_comments' %>
