--- a/app/views/user_keys/index.html.erb
+++ b/app/views/user_keys/index.html.erb
@@ -3,11 +3,11 @@
 <table>
   <thead>
     <tr>
-      <th>Status</th>
-      <th>Time submitted</th>
-      <th>Time filtered</th>
-      <th>Value</th>
-      <th>Application text</th>
+      <th>User</th>
+      <th>Key Id</th>
+      <th>Submitted</th>
+      <th>Shared with approvers</th>
+      <th>Confirmed</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,12 +15,11 @@
   <tbody>
     <% @user_keys.each do |user_key| %>
       <tr>
-        <td><%= user_key.status %></td>
-        <td><%= user_key.time_submitted %></td>
-        <td><%= user_key.time_filtered %></td>
-        <td><%= user_key.value %></td>
-        <td><%= user_key.application_text %></td>
-        <td><%= link_to 'Show', user_key %></td>
+        <td><%= link_to user_key.user.andrew_id, user_key.user %></td>
+        <td><%= link_to user_key.id, user_key %></td>
+        <td><%= user_key.time_submitted.to_formatted_s(:pretty) %></td>
+        <td><%= user_key.time_filtered.to_formatted_s(:pretty) %></td>
+        <td><%= user_key.time_confirmed.to_formatted_s(:pretty) %></td>
         <td><%= link_to 'Edit', edit_user_key_path(user_key) %></td>
         <td><%= link_to 'Destroy', user_key, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
