--- a/app/views/user_keys/_form.html.erb
+++ b/app/views/user_keys/_form.html.erb
@@ -13,22 +13,30 @@
     </div>
   <% end %>
 
-  <div class="row">
-    <div class="column">
-      <%= f.label :user %><br>
+  <div class="collapsed_row">
+    <div class="three-column">
+      <%= f.label :user, class: "prefix" %>
+    </div>
+    <div class="nine-column">
       <%= f.collection_select :user_id, User.alphabetical, :id, :andrew_id %>
     </div>
-  
-    <div class="column">
-      <%= f.label :time_expired %><br>
+  </div>
+  <div class="collapsed_row">
+    <div class="three-column">
+      <%= f.label :time_expired, class: "prefix" %>
+    </div>
+    <div class="nine-column">
       <%= f.date_field :time_expired, order: [:month, :day, :year], 
-                      start_year: Date.today.year, 
-                      end_year: 2.years.from_now %>
+                      start_year: Date.today.year, end_year: 2.years.from_now %>
     </div>
   </div>
-  <div class="field">
-    <%= f.label :application_text %><br>
-    <%= f.text_field :application_text %>
+  <div class="collapsed_row">
+    <div class="three-column">
+      <%= f.label :application_text, class: "prefix" %>
+    </div>
+    <div class="nine-column">
+      <%= f.text_field :application_text %>
+    </div>
   </div>
   
   <%= render :partial => 'filters_checkboxes' %>
