Added organizations to user pages

--- a/app/views/filters/_form.html.erb
+++ b/app/views/filters/_form.html.erb
@@ -23,7 +23,7 @@
     <div class="three-column">
       <%= f.label :filter_name %><br>
     </end>
-    <div class="nine-column"
+    <div class="nine-column">
       <%= f.text_field :filter_name %>
     </div>
   </div>
