--- a/app/views/user_keys/_list_of_organizations.html.erb
+++ b/app/views/user_keys/_list_of_organizations.html.erb
@@ -1,8 +1,8 @@
 <p>
-  <b><%= pluralize(@user_key.organizations.size, 'Filter') %></b><br />
+  <b><%= pluralize(@user_key.organizations.size, 'Organization') %></b><br />
   <ul>
     <% for org in @user_key.organizations %>
-      <li><%= @org.name %></li>
+      <li><%= org.name %></li>
     <% end  %>
   </ul>
 </p>
