--- a/app/views/user_keys/index.html.erb
+++ b/app/views/user_keys/index.html.erb
@@ -3,8 +3,8 @@
 <table>
   <thead>
     <tr>
-      <th>User</th>
       <th>Key Id</th>
+      <th>User</th>
       <th>Submitted</th>
       <th>Shared with approvers</th>
       <th>Confirmed</th>
@@ -15,11 +15,11 @@
   <tbody>
     <% @user_keys.each do |user_key| %>
       <tr>
-        <td><%= link_to user_key.user.andrew_id, user_key.user %></td>
         <td><%= link_to user_key.id, user_key %></td>
-        <td><%= user_key.time_submitted.to_formatted_s(:pretty) %></td>
-        <td><%= user_key.time_filtered.to_formatted_s(:pretty) %></td>
-        <td><%= user_key.time_confirmed.to_formatted_s(:pretty) %></td>
+        <td><%= link_to user_key.user.andrew_id, user_key.user %></td>
+        <td><%= user_key.time_submitted.nil? ? "N/A" : user_key.time_submitted.to_formatted_s(:pretty) %></td>
+        <td><%= user_key.time_filtered.nil? ? "N/A" : user_key.time_filtered.to_formatted_s(:pretty) %></td>
+        <td><%= user_key.time_confirmed.nil? ? "N/A" : user_key.time_confirmed.to_formatted_s(:pretty) %></td>
         <td><%= link_to 'Edit', edit_user_key_path(user_key), class: "small-button" %></td>
         <td><%= link_to 'Destroy', user_key, method: :delete, data: { confirm: 'Are you sure?' }, class: "small-button" %></td>
       </tr>
