--- a/app/views/user_keys/show.html.erb
+++ b/app/views/user_keys/show.html.erb
@@ -7,7 +7,17 @@
 
 <p>
   <strong>Time submitted:</strong>
-  <%= @user_key.time_submitted.to_formatted_s(:pretty) %>
+  <%= @user_key.time_submitted.nil? ? "Not submitted yet" : @user_key.time_submitted.to_formatted_s(:pretty) %>
+</p>
+
+<p> 
+  <strong>Time shared with approvers:</strong>
+  <%= @user_key.time_filtered.nil? ? "Not shared with approvers yet" : @user_key.time_filtered.to_formatted_s(:pretty) %>
+</p>
+
+<p>
+  <strong>Time confirmed:</strong>
+  <%= @user_key.time_confirmed.nil? ? "Not confirmed yet" : @user_key.time_confirmed.to_formatted_s(:pretty) %>
 </p>
 
 <p>
@@ -22,9 +32,13 @@
 
 <%= render partial: 'list_of_filters' %>
 
+<%= render partial: 'list_of_organizations' %>
+
 <%= render partial: 'submit_buttons' %>
 
 <%= link_to 'Edit', edit_user_key_path(@user_key), class: "big-button" %> |
 <%= link_to 'Back', user_keys_path, class: "big-button secondary" %>
+
+<%= render partial: 'list_of_approvers' %>
 
 <%= render partial: 'list_of_comments' %>
