--- a/app/views/user_keys/index.html.erb
+++ b/app/views/user_keys/index.html.erb
@@ -27,6 +27,9 @@
   </tbody>
 </table>
 
+<!-- Kaminari paginate -->
+<%= paginate @user_keys %>
+
 <br>
 
 <%= link_to 'New User key', new_user_key_path, class: "big-button" %>
