--- a/app/views/user_keys/index.html.erb
+++ b/app/views/user_keys/index.html.erb
@@ -12,23 +12,15 @@
     </tr>
   </thead>
 
-  <tbody>
-    <% @user_keys.each do |user_key| %>
-      <tr>
-        <td><%= link_to user_key.id, user_key %></td>
-        <td><%= link_to user_key.user.andrew_id, user_key.user %></td>
-        <td><%= user_key.time_submitted.nil? ? "N/A" : user_key.time_submitted.to_formatted_s(:pretty) %></td>
-        <td><%= user_key.time_filtered.nil? ? "N/A" : user_key.time_filtered.to_formatted_s(:pretty) %></td>
-        <td><%= user_key.time_confirmed.nil? ? "N/A" : user_key.time_confirmed.to_formatted_s(:pretty) %></td>
-        <td><%= link_to 'Edit', edit_user_key_path(user_key), class: "small-button" %></td>
-        <td><%= link_to 'Destroy', user_key, method: :delete, data: { confirm: 'Are you sure?' }, class: "small-button" %></td>
-      </tr>
-    <% end %>
+  <tbody id="user_keys">
+  <%= render @user_keys %>
   </tbody>
 </table>
 
 <!-- Kaminari paginate -->
-<%= paginate @user_keys %>
+<div id="paginator">
+  <%= paginate @user_keys, remote: true %></div>
+</div>
 
 <br>
 
