Ajaxed comments in user_keys, but I still need to prettify the user key show page

--- a/app/views/user_keys/index.js.erb
+++ b/app/views/user_keys/index.js.erb
@@ -1,2 +1,3 @@
-  $('#user_keys').html('<%= escape_javascript render(@user_keys) %>');
-  $('#paginator').html('<%= escape_javascript paginate(@user_keys, remote: true).to_s %>');
+<!-- For use with ajax and pagination -->
+  $('#user_keys').html('<%= escape_javascript render @user_keys  %>');
+  $('#paginator').html('<%= escape_javascript paginate @user_keys, remote: true.to_s %>');
