--- a/app/views/user_keys/_list_of_comments.html.erb
+++ b/app/views/user_keys/_list_of_comments.html.erb
@@ -2,16 +2,12 @@
 <h3>Comments</h3>
 
 <br/>
-<% @comments.each do |comment| %>
-  <div>
-    <strong><%= comment.user.andrew_id %></strong>
-    <br />
-    <p><%= comment.message %></p>
-  </div>
-<% end %>
+<div id="comments">
+  <%= render partial: 'comment', collection: @comments %>
+</div>
 
 <!--All new comment to be added-->
-<%= form_for(@user_key, url: add_comment_path(@user_key) ) do |f| %>
+<%= form_for(@user_key, url: add_comment_path(@user_key), remote: true ) do |f| %>
   <fieldset>
   	  
   <legend>Add a comment</legend>
