--- a/app/views/user_keys/_form.html.erb
+++ b/app/views/user_keys/_form.html.erb
@@ -39,7 +39,8 @@
     </div>
   </div>
   
-  <%= render :partial => 'filters_checkboxes' %>
+  <%= render partial: 'user_keys/form_partials/filters_checkboxes' %>
+  <%= render partial: 'user_keys/form_partials/organizations_checkboxes' %>
   
   <div class="actions">
     <%= f.submit class: "big-button success" %>
