--- a/app/views/user_keys/index.html.erb
+++ b/app/views/user_keys/index.html.erb
@@ -13,7 +13,7 @@
   </thead>
 
   <tbody id="user_keys">
-  <%= render @user_keys %>
+<%= render partial: 'user_keys/index_partials/user_key', collection: @user_keys %>
   </tbody>
 </table>
 
