--- a/app/views/user_keys/show_partials/_list_of_comments.html.erb
+++ b/app/views/user_keys/show_partials/_list_of_comments.html.erb
@@ -3,7 +3,7 @@
 
 <br/>
 <div id="comments">
-  <%= render partial: 'comment', collection: @comments %>
+  <%= render partial: 'user_keys/show_partials/comment', collection: @comments %>
 </div>
 
 <!--All new comment to be added-->
