--- a/app/views/users/index.js.erb
+++ b/app/views/users/index.js.erb
@@ -1,2 +1,2 @@
-  $('#users').html('<%= escape_javascript render(@users) %>');
+  $('#users').html('<%= escape_javascript render partial: 'users/index_partials/user', collection: @users %>');
   $('#paginator').html('<%= escape_javascript paginate(@users, remote: true).to_s %>');
