--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <header>
+    <header class="contain-to-grid">
       <%= render 'layouts/navigation' %>
     </header>
     <main role="main">
