Fixed show page for user keys

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -6,13 +6,11 @@ $body-bg: white;
 $body-font-color: #444;
 $heading-font-color: #444;
 
-$primary-color: #8C001A;
+$primary-color: #701;
 $secondary-color: #444;
 $info-color: #888;
 $alert-color: #c60f13;
 $success-color: #5da423;
-
-$global-radius: 3px !default;
 
 // import the CSS framework
 
