--- a/app/views/user_keys/form_partials/_filters_checkboxes.html.erb
+++ b/app/views/user_keys/form_partials/_filters_checkboxes.html.erb
@@ -1,3 +1,5 @@
+<h3>Filters</h3>
+
 <p>
   <% if Filter.all.empty? %>
   No filters can be selected because there are no filters in the system.
@@ -9,4 +11,3 @@
     <% end  %>  
   <% end %>
 </p>
-
