--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th>Andrew</th>
       <th>Role</th>
-      <th>Is approver</th>
+      <th>Approver?</th>
       <th colspan="3"></th>
     </tr>
   </thead>
