--- a/app/views/users/index_partials/_user.html.erb
+++ b/app/views/users/index_partials/_user.html.erb
@@ -1,7 +1,13 @@
+<!--Each user is passed in as part of the collection-->
   <tr>
 	<td><%= link_to user.andrew_id, user %></td>
 	<td><%= user.role %></td>
-	<td><%= user.is_approver %></td>
+	<td><% if user.is_approver %>
+               <i class="check fi-check"></i>
+            <% else %>
+               <i class="x fi-x"></i>
+            <% end %>
+        </td>
 	<td><%= link_to 'Edit', edit_user_path(user), class: "small-button" %></td>
 	<td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }, class: "small-button" %></td>
   </tr>
