--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,4 +1,6 @@
 <%# add navigation links to this file %>
+<%= link_to "Home", root_path %>
+
 <%= link_to "User Keys", user_keys_path %>
 
 <%= link_to "Users", users_path %>
