Added requester dashboard partial with placeholder data

--- a/app/views/home/_admin_dashboard.html.erb
+++ b/app/views/home/_admin_dashboard.html.erb
@@ -3,17 +3,17 @@
 <h5> Hi, [user]!  </h5>
 <br /> 
 
-<p> Here are the keys without any filter assignments yet: </p>
+<p> These keys do not have filter assignments yet: </p>
 <% if @pending_filter_keys.size > 0 %>
 <table>
   <tr>
-    <th>Key</th>
+    <th>Requester</th>
     <th>Date Submitted</th>
   </tr>
 <% @pending_filter_keys.each do |key| %>
   <tr>
-    <td><%= key.user_id %></td>
-    <td><%= key.time_submitted %></td>
+    <td><%= key.user.andrew_id %></td>
+    <td><%= key.time_submitted.to_formatted_s(:pretty)%></td>
   </tr>
 <% end %>
 </table>
@@ -21,18 +21,18 @@
 <% else %>
 <% end %>
 
-<p> Here are the keys pending approval: </p>
+<p> These keys are pending approval: </p>
 
 <% if @pending_approval.size > 0 %>
 <table>
   <tr>
-    <th>Key</th>
+    <th>Requester</th>
     <th>Date Submitted</th>
   </tr>
 <% @pending_approval.each do |key| %>
   <tr>
-    <td><%= key.user_id %></td>
-    <td><%= key.time_submitted %></td>
+    <td><%= key.user.andrew_id %></td>
+    <td><%= key.time_submitted.to_formatted_s(:pretty)%></td>
   </tr>
 <% end %>
 </table>
@@ -40,18 +40,18 @@
 <% else %>
 <% end %>
 
-<p> Existing Keys </p> 
+<p> Existing keys: </p> 
 
 <% if @confirmed_keys.size > 0 %>
 <table>
   <tr>
-    <th>Key</th>
-    <th>Date Submitted</th>
+    <th>Requester</th>
+    <th>Date Comfirmed</th>
   </tr>
 <% @confirmed_keys.each do |key| %>
   <tr>
-    <td><%= key.user_id %></td>
-    <td><%= key.time_submitted %></td>
+    <td><%= key.user.andrew_id %></td>
+    <td><%= key.time_confirmed.to_formatted_s(:pretty)%></td>
   </tr>
 <% end %>
 </table>
