--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,13 +1,29 @@
-<%# add navigation links to this file %>
-<li class="divider"></li>
-
-<li><%= link_to "User Keys", user_keys_path %>
-</li>
-
-<li><%= link_to "Users", users_path %></li>
-
-<li class="has-dropdown"><%= link_to "Filters", filters_path %>
-  <ul class="dropdown">
-    <li><%= link_to "Add a filter", new_filter_path %></li>
-  </ul>
-</li>
+<ul class="left"> 
+  <%# add navigation links to this file %>
+  <li class="divider"></li>
+  
+  <li><%= link_to "User Keys", user_keys_path %>
+  </li>
+  
+  <li><%= link_to "Users", users_path %></li>
+  
+  <li class="has-dropdown"><%= link_to "Filters", filters_path %>
+    <ul class="dropdown">
+      <li><%= link_to "Add a filter", new_filter_path %></li>
+    </ul>
+  </li>
+</ul>
+<ul class="right"> 
+  <li class="has-form">
+  <div class="collapsed_row">
+    <%= form_tag('users', method: 'get') do %>
+      <div class="search-param">
+        <%= text_field_tag :search, params[:search] %>
+      </div>
+      <div class="search-label">
+        <%= submit_tag "Find User", :name => nil, class: "search-button info postfix" %>
+      </div>
+    <% end %>
+  </div>
+  </li>
+</ul>
