--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,11 @@
 <h1>Listing Users</h1>
 
+<% if @users.empty? %>
+
+<p>No users found.</p>
+
+<% else %>
+
 <table>
   <thead>
     <tr>
@@ -20,6 +26,9 @@
   <%= paginate @users, remote: true %>
 </div>
 
+<% end %>
+
 <br>
+
 
 <%= link_to 'New User', new_user_path, class: "big-button" %>
