tested new scopes in user key

--- a/app/views/home/_admin_dashboard.html.erb
+++ b/app/views/home/_admin_dashboard.html.erb
@@ -13,7 +13,7 @@
   </tr>
 <% @pending_filter_keys.each do |key| %>
   <tr>
-    <td><%= link_to key.value, user_key_path(key) %>
+    <td><%= link_to key.name, user_key_path(key) %>
     <td><%= link_to key.user.andrew_id, user_path(key.user) %></td>
     <td><%= key.time_submitted.to_formatted_s(:pretty)%></td>
   </tr>
@@ -33,7 +33,7 @@
   </tr>
 <% @pending_approval.each do |key| %>
   <tr>
-    <td><%= link_to key.value, user_key_path(key) %>
+    <td><%= link_to key.name, user_key_path(key) %>
     <td><%= link_to key.user.andrew_id, user_path(key.user) %></td>
     <td><%= key.time_submitted.to_formatted_s(:pretty)%></td>
   </tr>
@@ -53,7 +53,7 @@
   </tr>
 <% @confirmed_keys.each do |key| %>
   <tr>
-    <td><%= link_to key.value, user_key_path(key) %>
+    <td><%= link_to key.name, user_key_path(key) %>
     <td><%= link_to key.user.andrew_id, user_path(key.user) %></td>
     <td><%= key.time_confirmed.to_formatted_s(:pretty)%></td>
   </tr>
