--- a/app/views/home/_requester_dashboard.html.erb
+++ b/app/views/home/_requester_dashboard.html.erb
@@ -13,7 +13,7 @@
   </tr>
 <% @in_progress.each do |key| %>
   <tr>
-    <td><%= link_to key.value, user_key_path(key) %></td>
+    <td><%= link_to key.name, user_key_path(key) %></td>
     <td><%= key.created_at.to_formatted_s(:pretty) %></td>
   </tr>
 <% end %>
@@ -31,7 +31,7 @@ None
   </tr>
 <% @confirmed_keys.each do |key| %>
   <tr>
-    <td><%= link_to key.value, user_key_path(key) %></td>
+    <td><%= link_to key.name, user_key_path(key) %></td>
     <!-- add expiry date to approved keys-->
     <!-- <td><= key.time_expired.to_formatted_s(:pretty)%></td> -->
   </tr>
@@ -50,7 +50,7 @@ None
   </tr>
 <% @expired_keys.each do |key| %>
   <tr>
-    <td><%= link_to key.value, user_key_path(key) %></td> 
+    <td><%= link_to key.name, user_key_path(key) %></td> 
     <!-- add expiry date to approved keys-->
     <!-- <td><= key.time_expired.to_formatted_s(:pretty)%></td> -->
   </tr>
