--- a/app/views/home/_requester_dashboard.html.erb
+++ b/app/views/home/_requester_dashboard.html.erb
@@ -3,8 +3,30 @@
 <h5> Hi, [user]!  </h5>
 <br /> 
 
-<button> Apply for a key </button>
-<p> Applications in Progress: </p>
+<button>Apply for a new key<% link_to new_user_key_path %></button>
+
+<p> Your Existing Keys: </p>
+<% if @confirmed_keys.size > 0 %>
+<table>
+  <tr>
+    <th>Key</th>
+    <th>Value</th>
+    <th>Expiry Date</th>
+  </tr>
+<% @confirmed_keys.each do |key| %>
+  <tr>
+    <td><%= link_to key.name, user_key_path(key) %></td>
+    <td><%= key.value %></td>
+    <!-- add expiry date to approved keys-->
+    <!-- <td><= key.time_expired.to_formatted_s(:pretty)%></td> -->
+  </tr>
+<% end %>
+</table>
+<% else %>
+None
+<% end %>
+
+<p> Incomplete Applications: </p>
 <% if @in_progress.size > 0 %>
 <table>
   <tr>
@@ -22,24 +44,24 @@
 None
 <% end %>
 
-<p> Your Existing Keys: </p>
-<% if @confirmed_keys.size > 0 %>
+<p> Applications Awaiting Administrator Review: </p>
+<% if @awaiting_admin_review.size > 0 %>
 <table>
   <tr>
     <th>Key</th>
-    <th>Expiry Date</th>
+    <th>Date Started</th>
   </tr>
-<% @confirmed_keys.each do |key| %>
+<% @awaiting_admin_review.each do |key| %>
   <tr>
     <td><%= link_to key.name, user_key_path(key) %></td>
-    <!-- add expiry date to approved keys-->
-    <!-- <td><= key.time_expired.to_formatted_s(:pretty)%></td> -->
+    <td><%= key.created_at.to_formatted_s(:pretty) %></td>
   </tr>
 <% end %>
 </table>
 <% else %>
 None
 <% end %>
+
 
 <p> Your Expired Keys: </p>
 <% if @expired_keys.size > 0 %>
