Fixed datetime bug in migration, fixed comment bug and search bug

--- a/app/views/user_keys/show.js.erb
+++ b/app/views/user_keys/show.js.erb
@@ -1,2 +1,2 @@
 <!--For use with ajax and comments-->
-  $('#comments').html('<%= escape_javascript render partial: 'comment', collection: @comments %>');
+  $('#comments').html('<%= escape_javascript render partial: 'user_keys/show_partials/comment', collection: @comments %>');
