--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -16,7 +16,7 @@
 <ul class="right"> 
   <li class="has-form">
   <div class="collapsed_row">
-    <%= form_tag('users', method: 'get') do %>
+    <%= form_tag users_path, method: 'get' do %>
       <div class="search-param">
         <%= text_field_tag :search, params[:search] %>
       </div>
