--- a/app/views/user_keys/show.html.erb
+++ b/app/views/user_keys/show.html.erb
@@ -41,4 +41,6 @@
 
 <%= render partial: 'user_keys/show_partials/list_of_approvers' %>
 
+<div id="comments">
 <%= render partial: 'user_keys/show_partials/list_of_comments' %>
+</div>
