Fixed my typos in home views

--- a/app/views/user_keys/show_partials/_list_of_comments.html.erb
+++ b/app/views/user_keys/show_partials/_list_of_comments.html.erb
@@ -31,7 +31,7 @@
   <% end %>
 
   <%= f.fields_for :comments, @comment do |p| %>
-        <%= p.hidden_field :user_id, value: current_user.id %>
+        <%= p.hidden_field :user_id, value: @current_user.id %>
 	<div class="row">
 	    <%= p.label :message %>
 	    <%= p.text_field :message %>
