--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,6 +1,6 @@
 <!-- Needs better admin/nonadmin authentication for additional roles -->
 
-<% if logged_in? and current_user.role == "admin" %>
+<% if logged_in? and @current_user.role == "admin" %>
   <ul class="left"> 
     <li class="divider"></li>
     
@@ -30,7 +30,7 @@
 
 <ul class="right">
   <% if logged_in? %>
-    <li><%= link_to "Welcome, #{current_user.andrew_id}", current_user %></li>
+    <li><%= link_to "Welcome, #{current_user.andrew_id}", @current_user %></li>
     
     <li class="divider"></li>
     
