Added terms to user key form

--- a/app/views/user_keys/index_partials/_user_key.html.erb
+++ b/app/views/user_keys/index_partials/_user_key.html.erb
@@ -1,9 +1,8 @@
   <tr>
-	<td><%= link_to user_key.id, user_key %></td>
+	<td><%= link_to user_key.name, user_key %></td>
 	<td><%= link_to user_key.user.andrew_id, user_key.user %></td>
 	<td><%= user_key.time_submitted.nil? ? "N/A" : user_key.time_submitted.to_formatted_s(:pretty) %></td>
 	<td><%= user_key.time_filtered.nil? ? "N/A" : user_key.time_filtered.to_formatted_s(:pretty) %></td>
 	<td><%= user_key.time_confirmed.nil? ? "N/A" : user_key.time_confirmed.to_formatted_s(:pretty) %></td>
 	<td><%= link_to 'Edit', edit_user_key_path(user_key), class: "small-button" %></td>
-	<td><%= link_to 'Destroy', user_key, method: :delete, data: { confirm: 'Are you sure?' }, class: "small-button" %></td>
   </tr>
