--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,13 +11,14 @@
 <p>
   <strong>Is approver:</strong>
   <% if @user.is_approver %>
-    <i class="check fi-check"></i>
+    <span class="success label">Yes</span>
   <% else %>
-    <i class="x fi-x"></i>
+    <span class="secondary label">No</span>
   <% end %>
 </p>
 
 <%= render partial: 'users/show_partials/list_of_user_keys' %>
 
 <%= link_to 'Edit', edit_user_path(@user), class: "big-button" %> |
-<%= link_to 'Back', users_path, class: "big-button secondary" %>
+<%= link_to 'Back', users_path, class: "big-button secondary" %> |
+<%= link_to 'Destroy', @user, method: :delete, data: { confirm: 'Are you sure?' }, class: "small-button" %>
