--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -29,12 +29,8 @@
     </div>
   </div>
   <div class="collapsed_row">
-    <div class="three-column">
-      <%= f.label :is_approver, class: "prefix" %>
-    </div>
-    <div class="nine-column">
-      <%= f.check_box :is_approver %>
-    </div>
+    <%= f.check_box :is_approver %>
+    <%= f.label :is_approver %>
   </div>
   
   <br/>
